--- a/twitter.css
+++ b/twitter.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+
 body{
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 
@@ -22,7 +26,7 @@ body{
 .grid-layout{
     display: grid;
     max-width:100%;
-    height:0px;
+    height:900px;
     grid-template-areas: "left-option nav nav"
                          "left-option main right-option";
     grid-template-rows:50px auto;
@@ -38,8 +42,6 @@ body{
     border-bottom: 1px solid #E5E7EB;
 }
 
-/* #E5E7EB */
-
 .main{
     border-right: 1px solid #E5E7EB;
     border-bottom: 1px solid #E5E7EB;
@@ -53,18 +55,22 @@ body{
 
 .left-container{
     list-style-type: none;
-    font-family: "-apple-system, BlinkMacSystemFont";
-    font-size: 23px;
-    font-weight:700;
+    font-size: 21px;
+    font-weight:600;
     padding-left: 136px;
+    padding-top:1px;
     margin: 0;
     display: inline-block;
 }
 
 .options{
-    padding: 15px;
-    margin-top: 3px;
+    padding:14.5px;
+    margin-top: 1px;
 
+}
+
+.menu{
+    padding-left: 17px;
 }
 
 .options:hover{
@@ -75,24 +81,26 @@ body{
 
 }
 
+.logo{
+    /* padding-top: 12px; */
+}
+/* .logo:hover{
+    width:25px;
+    height: 25px; 
+}  */
+
 .fa-twitter{
     color: rgb(29, 161, 242);
     font-size: 28px;
 }
 
-.fa-twitter:hover{
-    border-radius: 50%;
-    width: 25px;
-    height: 25px;
-}
 
 .twi{
-    /* padding-right: 20px; */
     font-size: 25px;
 }
 
 .fa-home{
-    font-size: 18px;
+    font-size: 19px;
 }
 
 .fa-envelope{
@@ -139,7 +147,6 @@ body{
 }
 
 .tweet{
-    /* padding:10px 10px 10px 130px; */
     background-color:rgb(29, 161, 242);
     border-radius: 30px;
     text-align: center;
@@ -148,10 +155,64 @@ body{
     font-size: 16px;
     font-weight: bold;
     color: white;
-    padding:15px 50px;
-    margin:15px 15px 15px 138px;
+    padding:15px 63px;
+    margin:10px 15px 15px 138px;
     cursor:pointer
 }
+
+/* user-details */
+
+.user-details{
+    display: flex;
+    position: relative;
+
+}
+
+.userPhoto{
+    border-radius: 50%;
+    height: 40px;
+    width:40px;
+    position: absolute;
+    left: 152px;
+    top: 63px;
+
+}
+
+
+.username{
+    position: absolute;
+    font-size: 10px;
+    top: 51px;
+    left: 203px;
+}
+
+.username > p{
+    font-size: 15px;
+    /* font-weight:500; */
+    position: absolute;
+    top:17px;
+    color: #9CA3AF;
+    /* color: #6B7280; */
+}
+
+.username > span{
+    font-size: 25px;
+    position: absolute;
+    left: 154px;
+    top: 8px;
+    font-weight: 900;
+}
+
+.user-details:hover{
+    background-color:black;
+    cursor: pointer;
+}
+
+
+
+
+
+
 
 
 
