--- a/twitter.css
+++ b/twitter.css
@@ -37,22 +37,19 @@ body{
 
 .navigation{
     border-bottom: 1px solid #E5E7EB;
-    
-
+    border-left: 1px solid #E5E7EB;   
 }
 
 .left-option{
-    border-right: 1px solid #E5E7EB;
-    /* border-bottom: 1px solid #E5E7EB; */
+    /* border-right: 1px solid #E5E7EB; */
+    position: fixed;
 }
 
 .main{
-    /* border-right: 1px solid #E5E7EB; */
-    /* border-bottom: 1px solid #E5E7EB; */
+    border-left: 1px solid #E5E7EB;
 }
 
 .right-option{
-    /* border-bottom: 1px solid #E5E7EB; */
     border: 1px solid #E5E7EB;
     position: relative;
 }
@@ -156,7 +153,7 @@ body{
     background-color:rgb(29, 161, 242);
     border-radius: 30px;
     text-align: center;
-    display: inline-block;
+    /* display: inline-block; */
     width: 100px;
     font-size: 16px;
     font-weight: bold;
