--- a/twitter.css
+++ b/twitter.css
@@ -460,15 +460,16 @@ input:focus{
     bottom: 0;
     right: 19px;
     font-size: 20px;
-    height: 20px;
+    height: 23px;
     font-family:'Fredoka One';
-    background-color: whitesmoke;
+    background-color: white;
     display: inline-block;
     padding: 15px 20px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 18px;
+    border-top-right-radius: 18px;
     width: 350px;
     box-shadow: black;
+    box-shadow: 10px 10px 200px grey;
 }
 
 .icon{
